# aoc-2021

./: .gitignore  Cargo.toml  README.md
day01/: input.txt
day01/src/: lib.rs
day02/: input.txt
day02/src/: lib.rs
day03/src/: lib.rs
day04/src/: lib.rs
day05/src/: lib.rs
day06/src/: lib.rs
day07/src/: lib.rs
day08/src/: lib.rs
day09/src/: lib.rs
day10/: Cargo.toml
day10/src/: grammar.pest  lib.rs
day11/src/: lib.rs
day12/src/: lib.rs
day13/src/: lib.rs
day14/src/: lib.rs
day15/src/: lib.rs
day16/src/: main.rs
day17/src/: lib.rs
day18/src/: lib.rs
day19/: Cargo.toml
day19/src/: lib.rs
src/: main.rs
