[package]
name = "aoc_2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day01 = { path = "day01" }
day02 = { path = "day02" }
day03 = { path = "day03" }
day04 = { path = "day04" }
day05 = { path = "day05" }
day07 = { path = "day07" }
day08 = { path = "day08" }
day09 = { path = "day09" }
